--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/database1?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/Feast_Freedom?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Robotics5
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -10,7 +10,8 @@ spring.jpa.show-sql=true
 
 spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .jsp
-spring.messages.basename=validation
+#spring.mvc.static-path-pattern=/resources/**
+spring.resources.static-locations=file:///c:/{eclipse-workspace}/{springboot-registration-login}/src/main/resources/static/
 
+spring.messages.basename=validation
 server.port=8080
-spring.jackson.serialization.fail-on-empty-beans=false
